--- a/jockeyjockey/src/app/app.html
+++ b/jockeyjockey/src/app/app.html
@@ -10,6 +10,7 @@
 <main class="container">
   <upload></upload>
   <winners-table></winners-table>
+  <race-details-table></race-details-table>
   <!-- <race-details></race-details> -->
   <!-- <jockey-leaderboard></jockey-leaderboard> -->
 </main>
