--- a/jockeyjockey/src/app/app.scss
+++ b/jockeyjockey/src/app/app.scss
@@ -1,7 +1,7 @@
 .container {
-  max-width: 1100px;
+//   max-width: 1100px;
   margin: 2rem auto;
-  padding: 0 1rem;
+  padding: 1rem 2rem;
   display: grid;
   gap: 1rem;
 }
