--- a/jockeyjockey/src/app/components/winners-table/winners-table.html
+++ b/jockeyjockey/src/app/components/winners-table/winners-table.html
@@ -1,6 +1,6 @@
 <mat-card *ngIf="data().length > 0">
-    <table mat-table matSort [dataSource]="dataSource"
-            class="mat-elevation-z1 winners-table">
+  <div class="table-container">
+    <table mat-table matSort [dataSource]="dataSource" class="mat-elevation-z1 winners-table">
       <!-- Race -->
       <ng-container matColumnDef="race">
         <th mat-header-cell mat-sort-header *matHeaderCellDef> Race </th>
@@ -9,7 +9,7 @@
 
       <!-- Date+Time -->
       <ng-container matColumnDef="dateTime">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> Race Date & Time </th>
+        <th mat-header-cell mat-sort-header *matHeaderCellDef> Race Date </th>
         <td mat-cell *matCellDef="let row"> {{ row.raceDateTime | date:'medium' }} </td>
       </ng-container>
 
@@ -25,9 +25,10 @@
         <td mat-cell *matCellDef="let row"> {{ row.jockey }} </td>
       </ng-container>
 
-      <tr mat-header-row mat-sort-header *matHeaderRowDef="cols"></tr>
+      <tr mat-header-row *matHeaderRowDef="cols; sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: cols;"></tr>
     </table>
+  </div>
 </mat-card>
 
 <p *ngIf="data().length === 0" class="empty">No data loaded yet.</p>
