--- a/jockeyjockey/src/app/app.html
+++ b/jockeyjockey/src/app/app.html
@@ -9,8 +9,10 @@
 
 <main class="container">
   <upload></upload>
-  <winners-table></winners-table>
-  <race-details-table></race-details-table>
+  <section class="two-col">
+    <winners-table></winners-table>
+    <race-details></race-details>
+  </section>
   <!-- <race-details></race-details> -->
   <!-- <jockey-leaderboard></jockey-leaderboard> -->
 </main>
