--- a/jockeyjockey/src/app/components/winners-table/winners-table.scss
+++ b/jockeyjockey/src/app/components/winners-table/winners-table.scss
@@ -7,6 +7,10 @@ h1 {
   width: 100%;
 }
 
+mat-card {
+  max-width: 800px;
+}
+
 th.mat-header-cell {
   font-weight: 600;
 }
@@ -18,7 +22,6 @@ th.mat-header-cell {
 
 .table-container {
     max-height: 600px;
-    max-width: 800px;
     overflow-y: auto;
     position: relative;
 }
