Leaderboard v1 checkpoint (altho it's wrong)

--- a/jockeyjockey/src/app/app.html
+++ b/jockeyjockey/src/app/app.html
@@ -13,8 +13,10 @@
     <winners-table></winners-table>
     <race-details></race-details>
   </section>
-  <!-- <race-details></race-details> -->
-  <!-- <jockey-leaderboard></jockey-leaderboard> -->
+
+  <section class="horse-section">
+    <jockey-leaderboard></jockey-leaderboard>
+  </section>
 </main>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
