--- a/jockeyjockey/src/app/components/jockey-leaderboard/jockey-leaderboard.html
+++ b/jockeyjockey/src/app/components/jockey-leaderboard/jockey-leaderboard.html
@@ -27,7 +27,9 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="cols; sticky: true"></tr>
-      <tr mat-row *matRowDef="let row; columns: cols;"></tr>
+      <tr mat-row *matRowDef="let row; columns: cols;"
+          (click)="onRowClick(row)"
+          [class.selected]="isSelected(row)"></tr>
     </table>
   </div>
 
