--- a/jockeyjockey/src/app/components/winners-table/winners-table.scss
+++ b/jockeyjockey/src/app/components/winners-table/winners-table.scss
@@ -9,6 +9,8 @@ h1 {
 
 mat-card {
   max-width: 800px;
+  height: 500px;
+  background-color: transparent;
 }
 
 th.mat-header-cell {
@@ -21,9 +23,9 @@ th.mat-header-cell {
 }
 
 .table-container {
-    max-height: 600px;
-    overflow-y: auto;
-    position: relative;
+  // max-height: 100%;
+  overflow-y: auto;
+  position: relative;
 }
 
 .table-container table {
