Fix race details table sorting

--- a/jockeyjockey/src/app/components/race-details-table/race-details-table.html
+++ b/jockeyjockey/src/app/components/race-details-table/race-details-table.html
@@ -46,5 +46,5 @@
 </mat-card>
 
 <ng-template #empty>
-  <p class="empty">Select a race from the winners table to view all finishers.</p>
+  <p class="empty">Select a race to see details</p>
 </ng-template>
