--- a/jockeyjockey/src/app/components/race-details-table/race-details-table.scss
+++ b/jockeyjockey/src/app/components/race-details-table/race-details-table.scss
@@ -31,4 +31,4 @@ th.mat-header-cell {
   border-collapse: collapse;
 }
 
-tr.mat-mdc-row.selected { background: rgba(25, 118, 210, 0.08); } // subtle primary tint
+tr.mat-mdc-row.selected { background: rgba(255, 255, 255, 0.127); }
