--- a/jockeyjockey/src/app/components/jockey-leaderboard/jockey-leaderboard.html
+++ b/jockeyjockey/src/app/components/jockey-leaderboard/jockey-leaderboard.html
@@ -13,7 +13,7 @@
 
       <ng-container matColumnDef="points">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Points</th>
-        <td mat-cell *matCellDef="let r" class="num">{{ r.points }}</td>
+        <td mat-cell *matCellDef="let r" class="num">{{ r.points | number:'1.0-2' }}</td>
       </ng-container>
 
       <ng-container matColumnDef="races">
