--- a/jockeyjockey/src/app/components/jockey-leaderboard/jockey-leaderboard.scss
+++ b/jockeyjockey/src/app/components/jockey-leaderboard/jockey-leaderboard.scss
@@ -22,13 +22,8 @@
 
 .leaderboard-table { width: 100%; }
 
-.num {
-  // text-align: right;
-  font-variant-numeric: tabular-nums;
-}
-
 th.mat-header-cell { font-weight: 600; }
 .empty { text-align: center; opacity: .7; }
 
-tr.mat-mdc-row.selected { background: rgba(25, 118, 210, 0.08); } // subtle primary tint
+tr.mat-mdc-row.selected { background: rgba(255, 255, 255, 0.127); }
 tr.mat-mdc-row { cursor: pointer; }
