--- a/jockeyjockey/src/app/components/winners-table/winners-table.scss
+++ b/jockeyjockey/src/app/components/winners-table/winners-table.scss
@@ -33,5 +33,5 @@ th.mat-header-cell {
   border-collapse: collapse;
 }
 
-tr.mat-mdc-row.selected { background: rgba(25, 118, 210, 0.08); } // subtle primary tint
+tr.mat-mdc-row.selected { background: rgba(255, 255, 255, 0.127); }
 tr.mat-mdc-row { cursor: pointer; }
